Minor fixes. Navbar hides on mobile when clicking option. Fixed images position. Widened popup on mobile

--- a/_sass/photos.scss
+++ b/_sass/photos.scss
@@ -31,6 +31,7 @@
 
   .photo {
     object-fit: cover;
+    object-position: top;
     height: 100%;
     width: 100%;
   }
