--- a/_sass/popup.scss
+++ b/_sass/popup.scss
@@ -47,3 +47,9 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  #popup {
+    width: 90vw;
+  }
+}
